# udigest

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  cspell.yml
.github/workflows/: publish.yml  readme.yml  rust.yml
examples/derivation/: Cargo.toml
examples/derivation/src/: lib.rs
src/: encoding.rs
tests/: encoding.rs
udigest/: CHANGELOG.md  Cargo.toml
udigest-derive/: CHANGELOG.md  Cargo.toml  README.md
udigest-derive/src/: attrs.rs  lib.rs
udigest/examples/: derivation.rs
udigest/src/: as_.rs  encoding.rs  inline_struct.rs  lib.rs
udigest/tests/: derive.rs  deterministic_hash.rs  digest_as.rs  encoding.rs  inline_struct.rs
udigest/tests/common/: mod.rs
