[package]
name = "udigest-derive"
version = "0.1.0"
edition = "2021"
description = "Proc macro for `udigest` crate"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dfns/udigest"

[lib]
proc-macro = true
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "2"
quote = "1"
proc-macro2 = "1"