[package]
name = "udigest"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Unambiguously digest structured data"
repository = "https://github.com/dfns/udigest"
categories = ["algorithms", "cryptography", "no-std", "no-std::no-alloc"]
keywords = ["hashing", "unambiguous-encoding"]
readme = "../README.md"

[package.metadata.docs.rs]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
digest = { version = "0.10", default-features = false }

udigest-derive = { version = "0.1", optional = true }

[dev-dependencies]
sha2 = "0.10"
hex = "0.4"

[features]
std = ["alloc"]
alloc = []
derive = ["dep:udigest-derive"]

[[test]]
name = "derive"
required-features = ["std", "derive"]

[[example]]
name = "derivation"
required-features = ["std", "derive"]