[package]
name = "udigest"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Unambiguously digest structured data"
repository = "https://github.com/LFDT-Lockness/udigest"
categories = ["algorithms", "cryptography", "no-std", "no-std::no-alloc"]
keywords = ["hashing", "unambiguous-encoding"]
readme = "../README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
digest = { version = "0.10", default-features = false, optional = true }

udigest-derive = { version = "0.3", path = "../udigest-derive", optional = true }

[dev-dependencies]
hex = "0.4"

sha2 = "0.10"
sha3 = "0.10"
blake2 = "0.10"

[features]
default = ["digest", "std", "inline-struct"]

std = ["alloc"]
alloc = []
derive = ["dep:udigest-derive"]

digest = ["dep:digest"]
inline-struct = []

[[test]]
name = "derive"
required-features = ["std", "derive", "digest"]

[[test]]
name = "deterministic_hash"
required-features = ["derive", "digest"]

[[test]]
name = "inline_struct"
required-features = ["derive", "inline-struct"]

[[test]]
name = "digest_as"
required-features = ["derive", "inline-struct"]

[[example]]
name = "derivation"
required-features = ["std", "derive", "digest"]

